force-app/main/default/objects/Chat_Bot__c/Chat_Bot__c.object-meta.xml
<CustomObject>
    <label>Chat Bot</label>
    <nameField>
        <displayFormat>CB - {00000}</displayFormat>
        <label>ChatBox Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Bots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>