force-app/main/default/objects/Chat_Bot__c/fields/Chat_Input__c.field-meta.xml
<CustomField>
    <fullName>Chat_Input__c</fullName>
    <label>Chat Input</label>
    <type>TextArea</type>
</CustomField>