force-app/main/default/objects/Chat_Bot__c/fields/Chat_Predictions__c.field-meta.xml
<CustomField>
    <fullName>Chat_Predictions__c</fullName>
    <label>Chat Predictions</label>
    <type>TextArea</type>
</CustomField>